# chaiscript-filesystem

./: .travis.yml  CMakeLists.txt  README.MD
include/chaiscript/: filesystem.hpp
include/chaiscript/filesystem/: fs_directory.hpp  fs_file.hpp  fs_module.hpp  fs_sandbox.hpp
tests/: chai.cpp  filesystem.cpp  filesystem_module.cpp  filesystem_sandbox.cpp  test.chai
